// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly bottom link dark 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-161pp7y-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:white;text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 161pp7y-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-161pp7y-MuiTypography-root"
          >
            test
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-b937i3-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:500;font-size:1.25rem;line-height:1.6;letter-spacing:0.0075em;color:white;}",
                    }
                  }
                  data-emotion="css b937i3-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  01
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-qlz4m-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:white;}",
                    }
                  }
                  data-emotion="css qlz4m-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-3rq6cm-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:white;}",
                    }
                  }
                  data-emotion="css 3rq6cm-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  02
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  03
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  04
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-srbm19-MuiLink-root{-webkit-text-decoration:none;text-decoration:none;color:white;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-top:48px;}",
              }
            }
            data-emotion="css srbm19-MuiLink-root"
          />
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-b8ml2h-MuiTypography-root-MuiLink-root{margin:0;font-family:inherit;font-weight:inherit;font-size:inherit;line-height:inherit;letter-spacing:inherit;color:white;font-weight:600;-webkit-text-decoration:none;text-decoration:none;color:white;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-top:48px;}",
              }
            }
            data-emotion="css b8ml2h-MuiTypography-root-MuiLink-root"
          />
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-b8ml2h-MuiTypography-root-MuiLink-root"
            href="#"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            See more
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-36vvbd-MuiSvgIcon-root{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;width:1em;height:1em;display:inline-block;fill:currentColor;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;-webkit-transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;font-size:1.25rem;margin-left:8px;margin-top:4px;}",
                }
              }
              data-emotion="css 36vvbd-MuiSvgIcon-root"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-36vvbd-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`renders correctly bottom link light 1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1il65t9-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:rgba(0, 0, 0, 0.87);text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 1il65t9-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1il65t9-MuiTypography-root"
          >
            test
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-oblp1g-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:500;font-size:1.25rem;line-height:1.6;letter-spacing:0.0075em;color:#1976d2;}",
                    }
                  }
                  data-emotion="css oblp1g-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  01
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1xszx61-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1xszx61-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1yr8029-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1yr8029-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  02
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  03
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  04
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-dagmi2-MuiLink-root{-webkit-text-decoration:none;text-decoration:none;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-top:48px;}",
              }
            }
            data-emotion="css dagmi2-MuiLink-root"
          />
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-oz77qp-MuiTypography-root-MuiLink-root{margin:0;font-family:inherit;font-weight:inherit;font-size:inherit;line-height:inherit;letter-spacing:inherit;color:#1976d2;font-weight:600;-webkit-text-decoration:none;text-decoration:none;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-top:48px;}",
              }
            }
            data-emotion="css oz77qp-MuiTypography-root-MuiLink-root"
          />
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-oz77qp-MuiTypography-root-MuiLink-root"
            href="#"
            onBlur={[Function]}
            onFocus={[Function]}
          >
            See more
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-36vvbd-MuiSvgIcon-root{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;width:1em;height:1em;display:inline-block;fill:currentColor;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;-webkit-transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;font-size:1.25rem;margin-left:8px;margin-top:4px;}",
                }
              }
              data-emotion="css 36vvbd-MuiSvgIcon-root"
            />
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-36vvbd-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`renders correctly no icons dark  1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-161pp7y-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:white;text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 161pp7y-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-161pp7y-MuiTypography-root"
          >
            test
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-b937i3-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:500;font-size:1.25rem;line-height:1.6;letter-spacing:0.0075em;color:white;}",
                    }
                  }
                  data-emotion="css b937i3-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  01
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-qlz4m-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:white;}",
                    }
                  }
                  data-emotion="css qlz4m-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-3rq6cm-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:white;}",
                    }
                  }
                  data-emotion="css 3rq6cm-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  02
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  03
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-b937i3-MuiTypography-root"
                >
                  04
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`renders correctly no icons light  1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1il65t9-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:rgba(0, 0, 0, 0.87);text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 1il65t9-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1il65t9-MuiTypography-root"
          >
            test
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-oblp1g-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:500;font-size:1.25rem;line-height:1.6;letter-spacing:0.0075em;color:#1976d2;}",
                    }
                  }
                  data-emotion="css oblp1g-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  01
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1xszx61-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1xszx61-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1yr8029-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1yr8029-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  02
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  03
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <p
                  className="MuiTypography-root MuiTypography-h6 css-oblp1g-MuiTypography-root"
                >
                  04
                </p>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`renders correctly with icon dark  1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-161pp7y-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:white;text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 161pp7y-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-161pp7y-MuiTypography-root"
          >
            title
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-6s28hl-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-6s28hl-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:9.6px;}",
                    }
                  }
                  data-emotion="css 6s28hl-MuiStack-root"
                />
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <style
                    dangerouslySetInnerHTML={
                      {
                        "__html": ".css-fbav7s-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.75rem;line-height:2.66;letter-spacing:0.08333em;text-transform:uppercase;color:white;opacity:0.6;}",
                      }
                    }
                    data-emotion="css fbav7s-MuiTypography-root"
                  />
                  <span
                    className="MuiTypography-root MuiTypography-overline css-fbav7s-MuiTypography-root"
                  >
                    01
                  </span>
                  <style
                    dangerouslySetInnerHTML={
                      {
                        "__html": ".css-1leu26s-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;color:white;}",
                      }
                    }
                    data-emotion="css 1leu26s-MuiStack-root"
                  />
                  <div
                    className="MuiStack-root css-1leu26s-MuiStack-root"
                  >
                    <style
                      dangerouslySetInnerHTML={
                        {
                          "__html": ".css-1mdftu-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;color:inherit;}",
                        }
                      }
                      data-emotion="css 1mdftu-MuiTypography-root"
                    />
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    >
                      <style
                        dangerouslySetInnerHTML={
                          {
                            "__html": ".css-i4bv87-MuiSvgIcon-root{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;width:1em;height:1em;display:inline-block;fill:currentColor;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;-webkit-transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;font-size:1.5rem;}",
                          }
                        }
                        data-emotion="css i4bv87-MuiSvgIcon-root"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DownloadIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 20h14v-2H5v2zM19 9h-4V3H9v6H5l7 7 7-7z"
                        />
                      </svg>
                    </p>
                    <style
                      dangerouslySetInnerHTML={
                        {
                          "__html": ".css-1fikuto{opacity:0.6;}@media (min-width:0px){.css-1fikuto{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg);}}@media (min-width:900px){.css-1fikuto{-webkit-transform:none;-moz-transform:none;-ms-transform:none;transform:none;}}",
                        }
                      }
                      data-emotion="css 1fikuto"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="white"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-qlz4m-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:white;}",
                    }
                  }
                  data-emotion="css qlz4m-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-3rq6cm-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:white;}",
                    }
                  }
                  data-emotion="css 3rq6cm-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-fbav7s-MuiTypography-root"
                  >
                    02
                  </span>
                  <div
                    className="MuiStack-root css-1leu26s-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="white"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-fbav7s-MuiTypography-root"
                  >
                    03
                  </span>
                  <div
                    className="MuiStack-root css-1leu26s-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="white"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-fbav7s-MuiTypography-root"
                  >
                    04
                  </span>
                  <div
                    className="MuiStack-root css-1leu26s-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-qlz4m-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-3rq6cm-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;

exports[`renders correctly with icon light  1`] = `
[
  <style
    dangerouslySetInnerHTML={
      {
        "__html": ".css-b4v54s{position:relative;overflow:hidden;}@media (min-width:0px){.css-b4v54s{padding-top:48px;padding-bottom:48px;padding-left:32px;padding-right:32px;}}@media (min-width:900px){.css-b4v54s{padding-top:64px;padding-bottom:64px;}}",
      }
    }
    data-emotion="css b4v54s"
  />,
  <section
    className="MuiBox-root css-b4v54s"
  >
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-nmz85s{position:absolute;inset:0;z-index:-10;height:100%;width:100%;object-fit:cover;}",
        }
      }
      data-emotion="css nmz85s"
    />
    <img
      className="MuiBox-root css-nmz85s"
      loading="lazy"
      role="presentation"
      src=""
    />
    <style
      dangerouslySetInnerHTML={
        {
          "__html": ".css-1p4tas-MuiContainer-root{width:100%;margin-left:auto;box-sizing:border-box;margin-right:auto;display:block;}@media (min-width:1200px){.css-1p4tas-MuiContainer-root{max-width:1200px;}}",
        }
      }
      data-emotion="css 1p4tas-MuiContainer-root"
    />
    <div
      className="MuiContainer-root MuiContainer-maxWidthLg MuiContainer-disableGutters css-1p4tas-MuiContainer-root"
    >
      <style
        dangerouslySetInnerHTML={
          {
            "__html": ".css-11lq3yg-MuiGrid-root{box-sizing:border-box;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;width:100%;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
          }
        }
        data-emotion="css 11lq3yg-MuiGrid-root"
      />
      <div
        className="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-1idn90j-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}@media (min-width:600px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:900px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1200px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}@media (min-width:1536px){.css-1idn90j-MuiGrid-root{-webkit-flex-basis:100%;-ms-flex-preferred-size:100%;flex-basis:100%;-webkit-box-flex:0;-webkit-flex-grow:0;-ms-flex-positive:0;flex-grow:0;max-width:100%;}}",
            }
          }
          data-emotion="css 1idn90j-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1il65t9-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:2.125rem;line-height:1.235;letter-spacing:0.00735em;color:rgba(0, 0, 0, 0.87);text-align:center;margin-bottom:64px;}",
              }
            }
            data-emotion="css 1il65t9-MuiTypography-root"
          />
          <h4
            className="MuiTypography-root MuiTypography-h4 css-1il65t9-MuiTypography-root"
          >
            title
          </h4>
        </div>
        <style
          dangerouslySetInnerHTML={
            {
              "__html": ".css-13i4rnv-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}",
            }
          }
          data-emotion="css 13i4rnv-MuiGrid-root"
        />
        <div
          className="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <style
            dangerouslySetInnerHTML={
              {
                "__html": ".css-1c6hvfg-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;margin-top:0px;}@media (min-width:0px){.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:32px;}}@media (min-width:900px){.css-1c6hvfg-MuiStack-root{-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;}.css-1c6hvfg-MuiStack-root>:not(style)+:not(style){margin:0;margin-left:64px;}}",
              }
            }
            data-emotion="css 1c6hvfg-MuiStack-root"
          />
          <div
            className="MuiStack-root css-1c6hvfg-MuiStack-root"
          >
            <style
              dangerouslySetInnerHTML={
                {
                  "__html": ".css-17nv2qh{-webkit-flex:0.25;-ms-flex:0.25;flex:0.25;}",
                }
              }
              data-emotion="css 17nv2qh"
            />
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <style
                dangerouslySetInnerHTML={
                  {
                    "__html": ".css-1okj3ks-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-1okj3ks-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:8px;}",
                  }
                }
                data-emotion="css 1okj3ks-MuiStack-root"
              />
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-6s28hl-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.css-6s28hl-MuiStack-root>:not(style)+:not(style){margin:0;margin-top:9.6px;}",
                    }
                  }
                  data-emotion="css 6s28hl-MuiStack-root"
                />
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <style
                    dangerouslySetInnerHTML={
                      {
                        "__html": ".css-1173d1d-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.75rem;line-height:2.66;letter-spacing:0.08333em;text-transform:uppercase;color:#1976d2;opacity:0.6;}",
                      }
                    }
                    data-emotion="css 1173d1d-MuiTypography-root"
                  />
                  <span
                    className="MuiTypography-root MuiTypography-overline css-1173d1d-MuiTypography-root"
                  >
                    01
                  </span>
                  <style
                    dangerouslySetInnerHTML={
                      {
                        "__html": ".css-3y1137-MuiStack-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;}",
                      }
                    }
                    data-emotion="css 3y1137-MuiStack-root"
                  />
                  <div
                    className="MuiStack-root css-3y1137-MuiStack-root"
                  >
                    <style
                      dangerouslySetInnerHTML={
                        {
                          "__html": ".css-1mdftu-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;color:inherit;}",
                        }
                      }
                      data-emotion="css 1mdftu-MuiTypography-root"
                    />
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    >
                      <style
                        dangerouslySetInnerHTML={
                          {
                            "__html": ".css-i4bv87-MuiSvgIcon-root{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;width:1em;height:1em;display:inline-block;fill:currentColor;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;-webkit-transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;font-size:1.5rem;}",
                          }
                        }
                        data-emotion="css i4bv87-MuiSvgIcon-root"
                      />
                      <svg
                        aria-hidden={true}
                        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="DownloadIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5 20h14v-2H5v2zM19 9h-4V3H9v6H5l7 7 7-7z"
                        />
                      </svg>
                    </p>
                    <style
                      dangerouslySetInnerHTML={
                        {
                          "__html": ".css-1fikuto{opacity:0.6;}@media (min-width:0px){.css-1fikuto{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg);}}@media (min-width:900px){.css-1fikuto{-webkit-transform:none;-moz-transform:none;-ms-transform:none;transform:none;}}",
                        }
                      }
                      data-emotion="css 1fikuto"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="#0062c3"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1xszx61-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:1.5rem;line-height:1.334;letter-spacing:0em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1xszx61-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Sicuro
                </p>
                <style
                  dangerouslySetInnerHTML={
                    {
                      "__html": ".css-1yr8029-MuiTypography-root{margin:0;font-family:"Roboto","Helvetica","Arial",sans-serif;font-weight:400;font-size:0.875rem;line-height:1.43;letter-spacing:0.01071em;color:rgba(0, 0, 0, 0.87);}",
                    }
                  }
                  data-emotion="css 1yr8029-MuiTypography-root"
                />
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-1173d1d-MuiTypography-root"
                  >
                    02
                  </span>
                  <div
                    className="MuiStack-root css-3y1137-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="#0062c3"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  Un risparmio di denaro per tutti: cittadini, imprese ed enti 
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-1173d1d-MuiTypography-root"
                  >
                    03
                  </span>
                  <div
                    className="MuiStack-root css-3y1137-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                    <div
                      className="MuiBox-root css-1fikuto"
                    >
                      <svg
                        aria-hidden="true"
                        fill="none"
                        height="24"
                        viewBox="0 0 44 24"
                        width="44"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clipRule="evenodd"
                          d="m31.5429 1.04289c.3905-.39052 1.0237-.39052 1.4142 0l10.25 10.25001c.1953.1953.2929.4512.2929.7071s-.0976.5118-.2929.7071l-10.25 10.25c-.3905.3905-1.0237.3905-1.4142 0s-.3905-1.0237 0-1.4142l8.5429-8.5429h-38.5858c-.552284 0-1-.4477-1-1s.447716-1 1-1h38.5858l-8.5429-8.5429c-.3905-.39051-.3905-1.02369 0-1.41421z"
                          fill="#0062c3"
                          fillRule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  I tempi di attesa tra l’invio e la ricezione delle notifiche spariscono
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
            <div
              className="MuiBox-root css-17nv2qh"
            >
              <article
                className="MuiStack-root css-1okj3ks-MuiStack-root"
              >
                <div
                  className="MuiStack-root css-6s28hl-MuiStack-root"
                >
                  <span
                    className="MuiTypography-root MuiTypography-overline css-1173d1d-MuiTypography-root"
                  >
                    04
                  </span>
                  <div
                    className="MuiStack-root css-3y1137-MuiStack-root"
                  >
                    <p
                      className="MuiTypography-root MuiTypography-body1 css-1mdftu-MuiTypography-root"
                    />
                  </div>
                </div>
                <p
                  className="MuiTypography-root MuiTypography-h5 css-1xszx61-MuiTypography-root"
                >
                  La CO2 emessa per erogare il servizio diminuisce sensibilmente
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-1yr8029-MuiTypography-root"
                >
                  Lorem ipsum dolor sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis ullamco laboris nisi ut aliquid ex ea commodi consequat. 
                </p>
              </article>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>,
]
`;
